@@ -8,9 +8,9 @@ Youtube Setup addon lets you easily apply your created keys inside Kodi and main
 
 How to use it:
 ---------------------
-First, get your own keys by reading [this post](https://forum.kodi.tv/showthread.php?tid=267160&pid=2299960#pid2299960).
+First, get your own keys by reading [this wiki post](https://github.com/jdf76/plugin.video.youtube/wiki/Personal-API-Keys).
 
-Then create a text file to load it locally or use a service like [pastebin.com](http://www.pastebin.com/)
+Then create a text file to load it locally or use a service like [pastebin.com](http://pastebin.com/)
 
 See file.txt `and` file.xml in examples directory, you can use either of the two formats, whichever looks more logical.
 
@@ -21,6 +21,17 @@ file.txt looks like this:
 file.xml has the info in xml tags already, so pretty self explanatory:
 
 ![](https://i.imgur.com/AWUQo4Q.jpg)
+
+client.json (beautified/formatted)
+
+![](https://i.imgur.com/gVHonLx.jpg)
+
+Supported services:
+
+- [pastebin.com](https://pastebin.com/)
+- [debian.net](https://paste.debian.net/)
+- [ubuntu.com](https://paste.ubuntu.com/)
+- [hastebin.com](https://hastebin.com/)
 
 License
 -------
