@@ -1,0 +1,12 @@
+{
+    "installed": {
+        "client_id": "123456789012-abcdefghijklmnopqrstuvwxyz123456.apps.googleusercontent.com",
+        "project_id": "twilight-123456",
+        "auth_uri": "https://accounts.google.com/o/oauth2/auth",
+        "token_uri": "https://oauth2.googleapis.com/token",
+        "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
+        "client_secret": "abcdefghijkl-mnopqrstuvw",
+		"api_key": "abcdefghijklmnopqrstuvwxyz12345678901234567890123456",
+        "redirect_uris": ["urn:ietf:wg:oauth:2.0:oob", "http://localhost"]
+    }
+}
