@@ -1,3 +1,11 @@
+[B]+ 2.0.0[/B] ~ (03-04-2020)
+- Proper Python 3 support
+- Added support for hastebin.com
+- Removed "youtube.api.enable" setting for post 6.7.0 youtube addon versions
+- Added support for google's client.json file from the credentials screen
+  > If api_key is not found in the json file, youtube setup will ask to be entered manually
+  > You can enter it in the file prior to the setup just by adding an additional key, see client.json example
+
 [B]+ 1.1.1[/B] ~ (26-09-2017)
 - Minor fix for plain txt files detection
 
